Fix img too tall. Set fixed size container for img

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ img {
 /* Body */
 body {
   display: flex;
+  width: 100%;
 }
 
 /* Decorative Background */
@@ -49,13 +50,18 @@ body {
   position: relative;
 }
 .decorative-background img {
-  background: #ccc;
+  background: pink;
   object-fit: cover;
   width: 100%;
+  height: 100vh;
 }
 .decorative-background figcaption {
   position: absolute;
   bottom: 0;
   right: 0;
   color: azure;
+}
+
+.not-loaded {
+  /* opacity: 0; */
 }
